--- a/configuration-client/src/main/resources/bootstrap.properties
+++ b/configuration-client/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
-spring.application.name=a-bootiful-client
+spring.application.name=configclient
 # N.B. this is the default:
 spring.cloud.config.uri=http://localhost:8888
 management.security.enabled=false
