--- a/configuration-service/src/main/resources/application.properties
+++ b/configuration-service/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/levik666/configuration.git
-
-message = Hello Levik
+spring.cloud.config.server.git.uri= https://github.com/levik666/guide-cloud-config
